fix layout bugs

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,3 @@
 .test {
   height: 100vh;
-  background-color: aliceblue;
 }
