--- a/components/mainHeader.module.css
+++ b/components/mainHeader.module.css
@@ -16,6 +16,7 @@ nav.header-content {
     display: flex;
     width: 100%;
     max-width: 1800px;
+    height: 75px;
     justify-content: space-between;
     align-items: center;
     text-transform: uppercase;
