--- a/components/navItem.module.css
+++ b/components/navItem.module.css
@@ -1,9 +1,13 @@
 li.item {
-    padding: 25px 20px;
+    padding: 0 20px;
+    height: 75px;
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 2px;
     opacity: .7;
+    display: flex;
+    align-items: center;
+    align-self: center;
     transition: opacity .2s;
 }
 
@@ -19,13 +23,13 @@ div.dropdown {
     width: 100vw;
     background-color: #fff;
     z-index: -1;
-    transition: all .6s ease-in;
+    transition: all .5s ease-in;
 }
 
 div.dropdown.show {
-    top: -5%;
+    top: 0;
     z-index: 10;
-    transition: all .6s ease-out;
+    transition: all .5s ease-out;
 }
 
 div.dropdown-backdrop {
@@ -36,13 +40,13 @@ div.dropdown-backdrop {
     height: 100%;
     z-index: 4;
     background-color: rgba(255, 255, 255, 0);
-    transition: all .6s .2s;
+    transition: all .5s .2s;
 }
 
 div.dropdown-backdrop.show {
     backdrop-filter: blur(5px);
     background-color: rgba(100, 100, 100, 0.5);
-    z-index: 5;
+    z-index: 6;
     transition: all .2s;
 }
 
