--- a/components/overlay.module.css
+++ b/components/overlay.module.css
@@ -4,7 +4,7 @@ div.overlay {
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 1;
+    z-index: 5;
     overflow: hidden;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .6));
 }
